--- a/requirements.txt
+++ b/requirements.txt
@@ -1,280 +1,57 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-accelerate=0.26.1=pypi_0
-addict=2.4.0=pypi_0
-aiohttp=3.9.1=pypi_0
-aioprometheus=23.12.0=pypi_0
-aiosignal=1.3.1=pypi_0
-aliyun-python-sdk-core=2.14.0=pypi_0
-aliyun-python-sdk-kms=2.16.2=pypi_0
-altair=5.2.0=pypi_0
-antlr4-python3-runtime=4.9.3=pypi_0
-anyio=4.2.0=pypi_0
-appdirs=1.4.4=pypi_0
-argon2-cffi=23.1.0=pypi_0
-argon2-cffi-bindings=21.2.0=pypi_0
-arrow=1.3.0=pypi_0
-astroid=3.2.0=pypi_0
-asttokens=2.4.1=pyhd8ed1ab_0
-async-lru=2.0.4=pypi_0
-async-timeout=4.0.3=pypi_0
-attrs=23.2.0=pypi_0
-babel=2.15.0=pypi_0
-backcall=0.2.0=pyh9f0ad1d_0
-backoff=2.2.1=pypi_0
-beautifulsoup4=4.12.3=pypi_0
-bleach=6.1.0=pypi_0
-blinker=1.7.0=pypi_0
-blobfile=2.1.1=pypi_0
-brotli-python=1.1.0=py39h3d6467e_1
-bzip2=1.0.8=hd590300_5
-ca-certificates=2024.2.2=hbcca054_0
-cachetools=5.3.3=pypi_0
-certifi=2024.2.2=pyhd8ed1ab_0
-cffi=1.16.0=pypi_0
-charset-normalizer=3.3.2=pyhd8ed1ab_0
-click=8.1.7=pypi_0
-clip=1.0=pypi_0
-colorama=0.4.6=pyhd8ed1ab_0
-comm=0.2.1=pyhd8ed1ab_0
-contourpy=1.2.0=pypi_0
-crcmod=1.7=pypi_0
-cryptography=41.0.7=pypi_0
-cycler=0.12.1=pypi_0
-datasets=2.16.1=pypi_0
-debugpy=1.8.1=py39h3d6467e_0
-decorator=5.1.1=pyhd8ed1ab_0
-defusedxml=0.7.1=pypi_0
-dill=0.3.7=pypi_0
-distro=1.9.0=pypi_0
-docker-pycreds=0.4.0=pypi_0
-einops=0.7.0=pypi_0
-exceptiongroup=1.2.0=pypi_0
-executing=2.0.1=pyhd8ed1ab_0
-fairscale=0.4.13=pypi_0
-fastapi=0.108.0=pypi_0
-fastjsonschema=2.19.1=pypi_0
-filelock=3.13.1=pyhd8ed1ab_0
-fire=0.6.0=pypi_0
-fonttools=4.47.2=pypi_0
-fqdn=1.5.1=pypi_0
-frozenlist=1.4.1=pypi_0
-fsspec=2023.10.0=pypi_0
-ftfy=6.1.3=pypi_0
-gast=0.5.4=pypi_0
-gdown=5.1.0=pypi_0
-gitdb=4.0.11=pypi_0
-gitpython=3.1.41=pypi_0
-h11=0.14.0=pypi_0
-httpcore=1.0.2=pypi_0
-httptools=0.6.1=pypi_0
-httpx=0.26.0=pypi_0
-huggingface_hub=0.20.2=pyhd8ed1ab_0
-idna=3.6=pyhd8ed1ab_0
-imageio=2.34.1=pypi_0
-imagenetv2-pytorch=0.1=pypi_0
-importlib-metadata=7.0.1=pyha770c72_0
-importlib-resources=6.1.1=pypi_0
-importlib_metadata=7.0.1=hd8ed1ab_0
-ipykernel=6.29.2=pyhd33586a_0
-ipython=8.12.0=pyh41d4057_0
-ipywidgets=8.1.2=pypi_0
-isoduration=20.11.0=pypi_0
-isort=5.13.2=pypi_0
-jedi=0.19.1=pyhd8ed1ab_0
-jinja2=3.1.2=pypi_0
-jmespath=0.10.0=pypi_0
-joblib=1.3.2=pypi_0
-json5=0.9.25=pypi_0
-jsonpointer=2.4=pypi_0
-jsonschema=4.20.0=pypi_0
-jsonschema-specifications=2023.12.1=pypi_0
-jupylint=2.2.4=pypi_0
-jupyter=1.0.0=pypi_0
-jupyter-console=6.6.3=pypi_0
-jupyter-events=0.10.0=pypi_0
-jupyter-lsp=2.2.5=pypi_0
-jupyter-server=2.14.0=pypi_0
-jupyter-server-terminals=0.5.3=pypi_0
-jupyter_client=8.6.0=pyhd8ed1ab_0
-jupyter_core=5.7.1=py39hf3d152e_0
-jupyterlab=4.1.8=pypi_0
-jupyterlab-pygments=0.3.0=pypi_0
-jupyterlab-server=2.27.1=pypi_0
-jupyterlab-widgets=3.0.10=pypi_0
-kiwisolver=1.4.5=pypi_0
-lazy-loader=0.4=pypi_0
-ld_impl_linux-64=2.40=h41732ed_0
-libffi=3.4.2=h7f98852_5
-libgcc-ng=13.2.0=h807b86a_3
-libgomp=13.2.0=h807b86a_3
-libnsl=2.0.1=hd590300_0
-libsodium=1.0.18=h36c2ea0_1
-libsqlite=3.44.2=h2797004_0
-libstdcxx-ng=13.2.0=h7e041cc_3
-libuuid=2.38.1=h0b41bf4_0
-libxcrypt=4.4.36=hd590300_1
-libzlib=1.2.13=hd590300_5
-lightning-utilities=0.10.1=pypi_0
-llama3=0.0.1=dev_0
-lxml=4.9.4=pypi_0
-markdown-it-py=3.0.0=pypi_0
-markupsafe=2.1.3=pypi_0
-matplotlib=3.8.2=pypi_0
-matplotlib-inline=0.1.6=pyhd8ed1ab_0
-mccabe=0.7.0=pypi_0
-mdurl=0.1.2=pypi_0
-mistune=3.0.2=pypi_0
-modelscope=1.10.0=pypi_0
-mpmath=1.3.0=pypi_0
-msgpack=1.0.7=pypi_0
-multidict=6.0.4=pypi_0
-multiprocess=0.70.15=pypi_0
-nbclient=0.10.0=pypi_0
-nbconvert=7.16.4=pypi_0
-nbformat=5.10.4=pypi_0
-ncurses=6.4=h59595ed_2
-nest-asyncio=1.6.0=pyhd8ed1ab_0
-networkx=3.2.1=pypi_0
-ninja=1.11.1.1=pypi_0
-notebook=7.1.3=pypi_0
-notebook-shim=0.2.4=pypi_0
-numpy=1.26.2=pypi_0
-nvidia-cublas-cu12=12.1.3.1=pypi_0
-nvidia-cuda-cupti-cu12=12.1.105=pypi_0
-nvidia-cuda-nvrtc-cu12=12.1.105=pypi_0
-nvidia-cuda-runtime-cu12=12.1.105=pypi_0
-nvidia-cudnn-cu12=8.9.2.26=pypi_0
-nvidia-cufft-cu12=11.0.2.54=pypi_0
-nvidia-curand-cu12=10.3.2.106=pypi_0
-nvidia-cusolver-cu12=11.4.5.107=pypi_0
-nvidia-cusparse-cu12=12.1.0.106=pypi_0
-nvidia-nccl-cu12=2.18.1=pypi_0
-nvidia-nvjitlink-cu12=12.3.101=pypi_0
-nvidia-nvtx-cu12=12.1.105=pypi_0
-omegaconf=2.3.0=pypi_0
-open-clip-torch=2.24.0=pypi_0
-openai=1.12.0=pypi_0
-opencv-python=4.9.0.80=pypi_0
-openssl=3.2.1=hd590300_0
-orjson=3.9.10=pypi_0
-oss2=2.18.4=pypi_0
-overrides=7.7.0=pypi_0
-packaging=23.2=pyhd8ed1ab_0
-pandas=2.1.4=pypi_0
-pandocfilters=1.5.1=pypi_0
-parso=0.8.3=pyhd8ed1ab_0
-pexpect=4.9.0=pyhd8ed1ab_0
-pickleshare=0.7.5=py_1003
-pillow=10.2.0=pypi_0
-pip=23.3.2=pyhd8ed1ab_0
-platformdirs=4.1.0=pypi_0
-prometheus-client=0.20.0=pypi_0
-prompt-toolkit=3.0.42=pyha770c72_0
-prompt_toolkit=3.0.42=hd8ed1ab_0
-protobuf=4.25.1=pypi_0
-psutil=5.9.7=pypi_0
-ptyprocess=0.7.0=pyhd3deb0d_0
-pure_eval=0.2.2=pyhd8ed1ab_0
-pyarrow=14.0.2=pypi_0
-pyarrow-hotfix=0.6=pypi_0
-pycparser=2.21=pypi_0
-pycryptodome=3.19.1=pypi_0
-pycryptodomex=3.20.0=pypi_0
-pydantic=1.10.13=pypi_0
-pydeck=0.8.1b0=pypi_0
-pygments=2.17.2=pyhd8ed1ab_0
-pylint=3.2.0=pypi_0
-pyparsing=3.1.1=pypi_0
-pysocks=1.7.1=pyha2e5f31_6
-python=3.9.18=h0755675_1_cpython
-python-dateutil=2.8.2=pyhd8ed1ab_0
-python-dotenv=1.0.0=pypi_0
-python-json-logger=2.0.7=pypi_0
-python_abi=3.9=4_cp39
-pytz=2023.3.post1=pypi_0
-pyyaml=6.0.1=py39hd1e30aa_1
-pyzmq=25.1.2=py39h8c080ef_0
-qtconsole=5.5.2=pypi_0
-qtpy=2.4.1=pypi_0
-quantile-python=1.1=pypi_0
-ray=2.9.0=pypi_0
-readline=8.2=h8228510_1
-referencing=0.32.0=pypi_0
-regex=2023.12.25=pypi_0
-requests=2.31.0=pyhd8ed1ab_0
-rfc3339-validator=0.1.4=pypi_0
-rfc3986-validator=0.1.1=pypi_0
-rich=13.7.0=pypi_0
-rpds-py=0.16.2=pypi_0
-safetensors=0.4.1=pypi_0
-scikit-image=0.22.0=pypi_0
-scikit-learn=1.3.2=pypi_0
-scipy=1.11.4=pypi_0
-send2trash=1.8.3=pypi_0
-sentencepiece=0.1.99=pypi_0
-sentry-sdk=1.40.2=pypi_0
-setproctitle=1.3.3=pypi_0
-setuptools=69.0.3=pyhd8ed1ab_0
-simplejson=3.19.2=pypi_0
-six=1.16.0=pyh6c4a22f_0
-smmap=5.0.1=pypi_0
-sniffio=1.3.0=pypi_0
-sortedcontainers=2.4.0=pypi_0
-soupsieve=2.5=pypi_0
-stack_data=0.6.2=pyhd8ed1ab_0
-starlette=0.32.0.post1=pypi_0
-streamlit=1.32.2=pypi_0
-sympy=1.12=pypi_0
-tenacity=8.2.3=pypi_0
-termcolor=2.4.0=pypi_0
-terminado=0.18.1=pypi_0
-threadpoolctl=3.2.0=pypi_0
-tifffile=2024.5.10=pypi_0
-tiktoken=0.4.0=pypi_0
-timm=0.9.12=pypi_0
-tinycss2=1.3.0=pypi_0
-tk=8.6.13=noxft_h4845f30_101
-tokenizers=0.15.0=pypi_0
-toml=0.10.2=pypi_0
-tomli=2.0.1=pypi_0
-tomlkit=0.12.5=pypi_0
-toolz=0.12.1=pypi_0
-torch=2.1.2=pypi_0
-torchmetrics=1.3.1=pypi_0
-torchvision=0.16.2=pypi_0
-tornado=6.3.3=py39hd1e30aa_1
-tqdm=4.66.1=pyhd8ed1ab_0
-traitlets=5.14.1=pyhd8ed1ab_0
-transformers=4.36.2=pypi_0
-triton=2.1.0=pypi_0
-types-python-dateutil=2.9.0.20240316=pypi_0
-typing-extensions=4.9.0=hd8ed1ab_0
-typing_extensions=4.9.0=pyha770c72_0
-tzdata=2023.4=pypi_0
-uri-template=1.3.0=pypi_0
-urllib3=2.1.0=pyhd8ed1ab_0
-uvicorn=0.25.0=pypi_0
-uvloop=0.19.0=pypi_0
-vllm=0.2.6=pypi_0
-wandb=0.16.3=pypi_0
-watchdog=4.0.0=pypi_0
-watchfiles=0.21.0=pypi_0
-wcwidth=0.2.12=pypi_0
-webcolors=1.13=pypi_0
-webencodings=0.5.1=pypi_0
-websocket-client=1.8.0=pypi_0
-websockets=12.0=pypi_0
-wheel=0.42.0=pyhd8ed1ab_0
-widgetsnbextension=4.0.10=pypi_0
-xformers=0.0.23.post1=pypi_0
-xxhash=3.4.1=pypi_0
-xz=5.2.6=h166bdaf_0
-yaml=0.2.5=h7f98852_2
-yapf=0.40.2=pypi_0
-yarl=1.9.4=pypi_0
-zeromq=4.3.5=h59595ed_0
-zipp=3.17.0=pyhd8ed1ab_0
+absl-py==2.1.0
+certifi==2024.6.2
+charset-normalizer==3.3.2
+clean-fid==0.1.35
+contourpy==1.2.1
+cycler==0.12.1
+filelock==3.14.0
+fonttools==4.53.0
+fsspec==2024.6.0
+grpcio==1.64.1
+idna==3.7
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+Jinja2==3.1.4
+kiwisolver==1.4.5
+Markdown==3.6
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.40
+nvidia-nvtx-cu12==12.1.105
+opencv-python==4.10.0.82
+packaging==24.0
+pandas==2.2.2
+Pillow==9.5.0
+protobuf==4.25.3
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.32.3
+scipy==1.13.1
+six==1.16.0
+sympy==1.12.1
+tensorboard==2.17.0
+tensorboard-data-server==0.7.2
+tensorboardX==2.6.2.2
+torch==2.3.1
+torchvision==0.18.1
+tqdm==4.66.4
+triton==2.3.1
+typing_extensions==4.12.1
+tzdata==2024.1
+urllib3==2.2.1
+Werkzeug==3.0.3
+zipp==3.19.2
